// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`audit — absolute mode, flagged tree > --json emits the stable AuditReport shape 1`] = `
{
  "command": "audit",
  "lockfile": {
    "path": "<fixture>/package-lock.json",
    "type": "npm",
  },
  "mode": "absolute",
  "packages": [
    {
      "findings": [
        {
          "layer": 1,
          "severity": "med",
          "signal": {
            "analyzer": "lifecycle-scripts",
            "code": "LW001-LIFECYCLE",
            "evidence": {
              "detail": "lifecycle script "postinstall" runs automatically on install",
              "excerpt": ""postinstall": "node post.js"",
              "file": "package.json",
            },
            "kind": "absolute",
            "metrics": {
              "scriptLength": 12,
            },
            "package": {
              "name": "with-post",
              "version": "1.0.0",
            },
          },
        },
      ],
      "grade": "C",
      "key": "with-post@1.0.0",
      "name": "with-post",
      "version": "1.0.0",
    },
    {
      "findings": [
        {
          "layer": 1,
          "severity": "low",
          "signal": {
            "analyzer": "binding-gyp",
            "code": "LW002-BINDING-GYP",
            "evidence": {
              "detail": "native build hook: binding.gyp present (binding.gyp)",
              "file": "binding.gyp",
            },
            "kind": "absolute",
            "metrics": {
              "gypfileFlag": 0,
              "hasGypFile": 1,
              "scriptMentionsNodeGyp": 0,
            },
            "package": {
              "name": "with-gyp",
              "version": "1.0.0",
            },
          },
        },
      ],
      "grade": "B",
      "key": "with-gyp@1.0.0",
      "name": "with-gyp",
      "version": "1.0.0",
    },
  ],
  "rollup": {
    "counts": {
      "critical": 0,
      "high": 0,
      "low": 1,
      "med": 1,
      "none": 0,
    },
    "grade": "C",
    "packagesAnalyzed": 2,
    "packagesFlagged": 2,
  },
  "warnings": [],
}
`;

exports[`audit — absolute mode, flagged tree > --sarif emits SARIF 2.1.0 with the level mapping 1`] = `
{
  "$schema": "https://json.schemastore.org/sarif-2.1.0.json",
  "runs": [
    {
      "results": [
        {
          "level": "note",
          "locations": [
            {
              "logicalLocations": [
                {
                  "fullyQualifiedName": "with-post@1.0.0",
                },
              ],
              "physicalLocation": {
                "artifactLocation": {
                  "uri": "<fixture>/package-lock.json",
                },
              },
            },
          ],
          "message": {
            "text": "with-post@1.0.0: lifecycle script "postinstall" runs automatically on install",
          },
          "partialFingerprints": {
            "lockwarden/v1": "84727975a499abbf7c11220616900a14f34615420a6844acdb792261077f8b25",
          },
          "ruleId": "LW001-LIFECYCLE",
          "ruleIndex": 0,
        },
      ],
      "tool": {
        "driver": {
          "informationUri": "https://github.com/itsraghul/lockwarden",
          "name": "lockwarden",
          "rules": [
            {
              "helpUri": "https://github.com/itsraghul/lockwarden#readme",
              "id": "LW001-LIFECYCLE",
            },
          ],
          "version": "<version>",
        },
      },
    },
  ],
  "version": "2.1.0",
}
`;

exports[`audit — baseline suppression > --json carries suppressed findings, suppressedCounts, and baseline info 1`] = `
{
  "baseline": {
    "entries": 2,
    "expired": 1,
    "matched": 1,
    "path": "<fixture>/.lockwarden-baseline.json",
  },
  "command": "audit",
  "lockfile": {
    "path": "<fixture>/package-lock.json",
    "type": "npm",
  },
  "mode": "absolute",
  "packages": [
    {
      "findings": [
        {
          "layer": 1,
          "severity": "low",
          "signal": {
            "analyzer": "binding-gyp",
            "code": "LW002-BINDING-GYP",
            "evidence": {
              "detail": "native build hook: binding.gyp present (binding.gyp)",
              "file": "binding.gyp",
            },
            "kind": "absolute",
            "metrics": {
              "gypfileFlag": 0,
              "hasGypFile": 1,
              "scriptMentionsNodeGyp": 0,
            },
            "package": {
              "name": "with-gyp",
              "version": "1.0.0",
            },
          },
        },
      ],
      "grade": "B",
      "key": "with-gyp@1.0.0",
      "name": "with-gyp",
      "version": "1.0.0",
    },
    {
      "findings": [],
      "grade": "A",
      "key": "with-post@1.0.0",
      "name": "with-post",
      "suppressed": [
        {
          "layer": 1,
          "severity": "med",
          "signal": {
            "analyzer": "lifecycle-scripts",
            "code": "LW001-LIFECYCLE",
            "evidence": {
              "detail": "lifecycle script "postinstall" runs automatically on install",
              "excerpt": ""postinstall": "node post.js"",
              "file": "package.json",
            },
            "kind": "absolute",
            "metrics": {
              "scriptLength": 12,
            },
            "package": {
              "name": "with-post",
              "version": "1.0.0",
            },
          },
          "suppression": {
            "addedAt": "2026-07-05",
            "reason": "postinstall reviewed — writes a local marker file only",
          },
        },
      ],
      "version": "1.0.0",
    },
  ],
  "rollup": {
    "counts": {
      "critical": 0,
      "high": 0,
      "low": 1,
      "med": 0,
      "none": 0,
    },
    "grade": "B",
    "packagesAnalyzed": 2,
    "packagesFlagged": 1,
    "suppressedCounts": {
      "critical": 0,
      "high": 0,
      "low": 0,
      "med": 1,
      "none": 0,
    },
  },
  "warnings": [
    "baseline entry LW002-BINDING-GYP (already-gone) expired 2026-02-01 — no longer suppressing",
  ],
}
`;

exports[`audit — baseline suppression > --sarif emits suppressed results with the suppressions property 1`] = `
{
  "$schema": "https://json.schemastore.org/sarif-2.1.0.json",
  "runs": [
    {
      "results": [
        {
          "level": "note",
          "locations": [
            {
              "logicalLocations": [
                {
                  "fullyQualifiedName": "with-post@1.0.0",
                },
              ],
              "physicalLocation": {
                "artifactLocation": {
                  "uri": "<fixture>/package-lock.json",
                },
              },
            },
          ],
          "message": {
            "text": "with-post@1.0.0: lifecycle script "postinstall" runs automatically on install",
          },
          "partialFingerprints": {
            "lockwarden/v1": "84727975a499abbf7c11220616900a14f34615420a6844acdb792261077f8b25",
          },
          "ruleId": "LW001-LIFECYCLE",
          "ruleIndex": 0,
          "suppressions": [
            {
              "justification": "postinstall reviewed — writes a local marker file only",
              "kind": "external",
            },
          ],
        },
      ],
      "tool": {
        "driver": {
          "informationUri": "https://github.com/itsraghul/lockwarden",
          "name": "lockwarden",
          "rules": [
            {
              "helpUri": "https://github.com/itsraghul/lockwarden#readme",
              "id": "LW001-LIFECYCLE",
            },
          ],
          "version": "<version>",
        },
      },
    },
  ],
  "version": "2.1.0",
}
`;
